feat: rename convertedAmount to convertedBalance in balance endpoint
